--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 .main {
 display: flex;
-min-height: 100vh;
+min-height: 100dvh;
 justify-content: center;
 align-items: center;
 flex-direction: column;
